--- a/donate.html
+++ b/donate.html
@@ -12,10 +12,10 @@
     var mute = localStorage.getItem('muteState') || "no";
     var music = new Audio("sounds/Further_Away.mp3"); // buffers automatically when created
     if (mute === "yes") {
-        music.pause();
-    } else if (mute === "no"){
-        music.loop = true;
-        music.play();
+      music.pause();
+    } else if (mute === "no") {
+      music.loop = true;
+      music.play();
     }
 
     var backgroundImage = new Image();
@@ -70,7 +70,13 @@
     }
 
     function backToMainMenu() {
-      window.location = "about.html";
+      if (mute === "no") {
+        var navBack_snd = new Audio("sounds/navigateBack.wav"); // buffers automatically when created
+        navBack_snd.play();
+      }
+      navBack_snd.onended = function() {
+        window.location = "about.html";
+      };
     }
 
     function addButton(x1, y1, x2, y2, callback, param) {
@@ -90,9 +96,9 @@
       addButton(132 / 1920 * canvasWidth, 110 / 1080 * canvasHeight, 413 / 1920 * canvasWidth, 193 / 1080 * canvasHeight, backToMainMenu);
       addButton(118 / 1920 * canvasWidth, 400 / 1080 * canvasHeight, 352 / 1920 * canvasWidth, 469 / 1080 * canvasHeight, goToDonate);
 
-      addButton(1667 / 1920 * canvasWidth, 512 / 1080 * canvasHeight, 1817 / 1920 * canvasWidth, 662 / 1080 * canvasHeight, draw, "qrCodeEther");
-      addButton(1667 / 1920 * canvasWidth, 674 / 1080 * canvasHeight, 1817 / 1920 * canvasWidth, 824 / 1080 * canvasHeight, draw, "qrCodeMonero");
-      addButton(1667 / 1920 * canvasWidth, 838 / 1080 * canvasHeight, 1817 / 1920 * canvasWidth, 988 / 1080 * canvasHeight, draw, "qrCodeBitcoin");
+      addButton(103 / 1920 * canvasWidth, 512 / 1080 * canvasHeight, 1817 / 1920 * canvasWidth, 662 / 1080 * canvasHeight, draw, "qrCodeEther");
+      addButton(103 / 1920 * canvasWidth, 674 / 1080 * canvasHeight, 1817 / 1920 * canvasWidth, 824 / 1080 * canvasHeight, draw, "qrCodeMonero");
+      addButton(103 / 1920 * canvasWidth, 838 / 1080 * canvasHeight, 1817 / 1920 * canvasWidth, 988 / 1080 * canvasHeight, draw, "qrCodeBitcoin");
       addButton(1410 / 1920 * canvasWidth, 30 / 1080 * canvasHeight, 1470 / 1920 * canvasWidth, 90 / 1080 * canvasHeight, draw);
     }
 
