--- a/game.html
+++ b/game.html
@@ -277,6 +277,7 @@
 			if (mute === "yes") {
 				// TODO add mute
 				localStorage.setItem('muteState', "yes");
+                localStorage.setItem('musicMuteState', "yes");
 			} else if (mute === "no") {
 				// TODO add mute
 				localStorage.setItem('muteState', "no");
