--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	<canvas id='c' style='position: absolute; left: 0px; top: 0px; z-index: 2;'></canvas>
 	<canvas id='cb' style='position: absolute; left: 0px; top: 0px; z-index: 1;'></canvas>
 	<script>
-        function init() {
+		function init() {
 			loadImages("LoadingScreen.png", "LoadingScreen2.png");
 		}
 
@@ -22,7 +22,7 @@
 			canvas.width = window.innerWidth;
 			canvas.height = window.innerHeight;
 			var loadingImage = new Image();
-			loadingImage.src = "images/" + loadingPic1;
+			loadingImage.src = "images/Pages/" + loadingPic1;
 			loop();
 
 			function loop() {
@@ -32,26 +32,24 @@
 				ctx.globalAlpha = 1;
 				ctx.drawImage(loadingImage, 0, 0, window.innerWidth, window.innerHeight);
 				ctx.globalAlpha = alpha;
-                ctx.font = 1 + 'px "Escapists"';
-                ctx.fillStyle = "#ffffff";
-                ctx.fillText("#SunnyisaH03", canvas.width * 2, canvas.height * 3);
-                ctx.font = 1 + 'px "PressStart2P"';
-                ctx.fillStyle = "#ffffff";
-                ctx.fillText("#WatergameConfirmed", canvas.width * 2, canvas.height * 2);
-                ctx.fillStyle = "black";
+				ctx.font = 1 + 'px "Escapists"';
+				ctx.fillStyle = "#ffffff";
+				ctx.fillText("#SunnyisaH03", canvas.width * 2, canvas.height * 3);
+				ctx.font = 1 + 'px "PressStart2P"';
+				ctx.fillStyle = "#ffffff";
+				ctx.fillText("#WatergameConfirmed", canvas.width * 2, canvas.height * 2);
+				ctx.fillStyle = "black";
 				ctx.fillRect(0, 0, window.innerWidth, window.innerHeight);
 				if (alpha <= 1) requestAnimationFrame(loop);
 				else {
 					if (loadingPic2 != undefined) {
 						loadImages(loadingPic2, undefined);
 					} else {
-						// load game.html
-						window.location = 'game.html';
+						window.location = 'menu.html';
 					}
 				}
 			}
 		}
-
 	</script>
 	<br>
 </body>
