--- a/about.html
+++ b/about.html
@@ -34,7 +34,7 @@
       canvas.width = window.innerWidth;
       canvas.height = window.innerHeight;
       ctx = canvas.getContext("2d");
-      backgroundImage.src = "images/about.png";
+      backgroundImage.src = "images/Pages/about.png";
       backgroundImage.onload = function() {
         draw();
       }
@@ -44,20 +44,24 @@
       if (mute === "no") {
         var navFor_snd = new Audio("sounds/navigateForwards.wav"); // buffers automatically when created
         navFor_snd.play();
-      }
-      navFor_snd.onended = function() {
+        navFor_snd.onended = function() {
+          window.location = "https://www.technotitans.org/donate.html";
+        };
+      } else {
         window.location = "https://www.technotitans.org/donate.html";
-      };
+      }
     }
 
     function backToMainMenu() {
       if (mute === "no") {
         var navBack_snd = new Audio("sounds/navigateBack.wav"); // buffers automatically when created
         navBack_snd.play();
+        navBack_snd.onended = function() {
+          window.location = "menu.html";
+        };
+      } else {
+        window.location = "menu.html";
       }
-      navBack_snd.onended = function() {
-        window.location = "game.html";
-      };
     }
 
     function addButton(x1, y1, x2, y2, callback) {
@@ -77,9 +81,19 @@
       addButton(60 / 1920 * canvasWidth, 805 / 1080 * canvasHeight, 758 / 1920 * canvasWidth, 943 / 1080 * canvasHeight, goToDonate);
     }
 
-    function checkButtons(evt) {
+    function touches(evt) {
       var x = evt.changedTouches[0].pageX;
       var y = evt.changedTouches[0].pageY;
+      checkButtons(x, y);
+    }
+
+    function clicks(evt) {
+      var x = evt.clientX;
+      var y = evt.clientY;
+      checkButtons(x, y);
+    }
+
+    function checkButtons(x, y) {
       for (var i = 0; i < buttons.length; i++) {
         var b = buttons[i];
         if (x > b.x1 && x < b.x2 && y > b.y1 && y < b.y2) {
@@ -91,7 +105,8 @@
     function init() {
       loadBackgroundImage();
       setButtons();
-      window.addEventListener('touchstart', checkButtons);
+      window.addEventListener('touchstart', touches);
+      window.addEventListener('click', clicks);
     }
   </script>
 </body>
