--- a/cosmetics.html
+++ b/cosmetics.html
@@ -19,14 +19,32 @@
       music.play();
     }
 
+    // document.body.requestFullscreen();
+    var coinScore = localStorage.getItem('coins') || 0;
+    var forcePowerups = localStorage.getItem('forcepowerup') || 0;
+    var levitatePowerups = localStorage.getItem('levitatepowerup') || 0;
+    var boostPowerups = localStorage.getItem('boostpowerup') || 0;
+
+
     var backgroundImage = new Image();
     var ctx;
     var buttons = [];
+
+    var priceForce = 20;
+    var priceLevitate = 30;
+    var priceBoost = 25;
 
     function draw() {
       var canvasWidth = window.innerWidth;
       var canvasHeight = window.innerHeight;
       ctx.drawImage(backgroundImage, 0, 0, canvasWidth, canvasHeight);
+      // TODO change font here
+      ctx.font = 85 / 1080 * canvasHeight + 'px "PressStart2P';
+      ctx.fillStyle = "#009bd4";
+      ctx.fillText("" + coinScore, 1140 / 1920 * canvasWidth, 480 / 1080 * canvasHeight);
+      ctx.fillText("" + forcePowerups, 800 / 1920 * canvasWidth, 630 / 1080 * canvasHeight);
+      ctx.fillText("" + levitatePowerups, 860 / 1920 * canvasWidth, 738 / 1080 * canvasHeight);
+      ctx.fillText("" + boostPowerups, 800 / 1920 * canvasWidth, 850 / 1080 * canvasHeight);
     }
 
     function loadBackgroundImage() {
@@ -34,8 +52,51 @@
       canvas.width = window.innerWidth;
       canvas.height = window.innerHeight;
       ctx = canvas.getContext("2d");
-      backgroundImage.src = "images/Pages/help.png";
+      console.log("loading store background");
+      backgroundImage.src = "images/Pages/store.png?801724";
       backgroundImage.onload = function() {
+        draw();
+      }
+    }
+
+    function buyForce() {
+      if (coinScore >= priceForce) {
+        if (mute === "no") {
+          var cash_snd = new Audio("sounds/cashingOut.wav"); // buffers automatically when created
+          cash_snd.play();
+        }
+        forcePowerups++;
+        coinScore -= priceForce;
+        localStorage.setItem('coins', coinScore);
+        localStorage.setItem('forcepowerup', forcePowerups);
+        draw();
+      }
+    }
+
+    function buyLevitate() {
+      if (coinScore >= priceLevitate) {
+        if (mute === "no") {
+          var cash_snd = new Audio("sounds/cashingOut.wav"); // buffers automatically when created
+          cash_snd.play();
+        }
+        levitatePowerups++;
+        coinScore -= priceLevitate;
+        localStorage.setItem('coins', coinScore);
+        localStorage.setItem('levitatepowerup', levitatePowerups);
+        draw();
+      }
+    }
+
+    function buyBoost() {
+      if (coinScore >= priceBoost) {
+        if (mute === "no") {
+          var cash_snd = new Audio("sounds/cashingOut.wav"); // buffers automatically when created
+          cash_snd.play();
+        }
+        boostPowerups++;
+        coinScore -= priceBoost;
+        localStorage.setItem('coins', coinScore);
+        localStorage.setItem('boostpowerup', boostPowerups);
         draw();
       }
     }
@@ -65,6 +126,9 @@
     function setButtons() {
       var canvasWidth = window.innerWidth;
       var canvasHeight = window.innerHeight;
+      addButton(1469 / 1920 * canvasWidth, 539 / 1080 * canvasHeight, 1682 / 1920 * canvasWidth, 619 / 1080 * canvasHeight, buyForce);
+      addButton(1469 / 1920 * canvasWidth, 649 / 1080 * canvasHeight, 1682 / 1920 * canvasWidth, 729 / 1080 * canvasHeight, buyLevitate);
+      addButton(1469 / 1920 * canvasWidth, 760 / 1080 * canvasHeight, 1682 / 1920 * canvasWidth, 840 / 1080 * canvasHeight, buyBoost);
       addButton(132 / 1920 * canvasWidth, 110 / 1080 * canvasHeight, 413 / 1920 * canvasWidth, 193 / 1080 * canvasHeight, backToMainMenu);
     }
 
