name text box size fixed

--- a/settings.html
+++ b/settings.html
@@ -27,13 +27,13 @@
     var inputType = 1;
     var input = new CanvasInput({
       canvas: document.getElementById('c'),
-      x: 800 / 1920 * window.innerWidth,
-      y: 320 / 1080 * window.innerHeight,
+      x: 702 / 1920 * window.innerWidth,
+      y: 305 / 1080 * window.innerHeight,
       fontSize: 30,
       fontFamily: 'Escapists',
       fontColor: '#212121',
-      width: 230,
-      height: 30,
+      width: 645 / 1920 * window.innerWidth,
+      height: 70 / 1080 * window.innerHeight,
       padding: 0,
       borderWidth: 1,
       borderColor: 'black',
